--- a/src/main/webapp/assets/css/admin.css
+++ b/src/main/webapp/assets/css/admin.css
@@ -1,9 +1,9 @@
 /* =========== Google Fonts ============ */
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap"); */
 
 /* =============== Globals ============== */
 * {
-  font-family: "Ubuntu", sans-serif;
+  /* font-family: "Ubuntu", sans-serif; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -220,6 +220,10 @@ body {
   grid-gap: 30px;
 }
 
+.cardBox a {
+  text-decoration: none;
+}
+
 .cardBox .card {
   position: relative;
   background: var(--white);
@@ -327,7 +331,7 @@ body {
 .details .recentTasks table tr td:nth-child(3) {
   text-align: center;
 }
-.status.low {
+.priority.low {
   padding: 2px 4px;
   background: #5ada00;
   color: var(--white);
@@ -335,7 +339,7 @@ body {
   font-size: 14px;
   font-weight: 500;
 }
-.status.medium {
+.priority.medium {
   padding: 2px 4px;
   background: #e900e9;
   color: var(--white);
@@ -343,7 +347,7 @@ body {
   font-size: 14px;
   font-weight: 500;
 }
-.status.high {
+.priority.high {
   padding: 2px 4px;
   background: #9f0d0d;
   color: var(--white);
@@ -364,6 +368,14 @@ body {
   position: relative;
   width: 40px;
   height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--blue);
+  font-size: 20px;
+  color: var(--white);
+  text-transform: uppercase;
   border-radius: 50px;
   overflow: hidden;
 }
@@ -377,14 +389,6 @@ body {
 }
 .profile {
   height: 40px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--blue);
-  font-size: 20px;
-  color: var(--white);
-  text-transform: uppercase;
 }
 .profile > img {
   width: 50px;
@@ -439,7 +443,7 @@ body {
   .recentTasks {
     overflow-x: auto;
   }
-  .status.inProgress {
+  .priority.inProgress {
     white-space: nowrap;
   }
 }
