Project Misc fix

--- a/src/main/webapp/template/admin_users.html
+++ b/src/main/webapp/template/admin_users.html
@@ -10,6 +10,7 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/loader.css" />
+    <link rel="icon" type="image/png" href="assets/icons/icon.png" sizes="96x96">
 </head>
 
 <body id="body-pd">
@@ -74,7 +75,7 @@
             <h3>Users</h3>
         </div>
         <div class="row">
-            <div class="mt-5 mb-3">
+            <div class="mt-4 mb-3">
                 <button class="btn btn-primary" data-toggle="modal" data-target="#formModal">
                     <i class="fa fa-add"></i>Add User
                 </button>
@@ -205,7 +206,7 @@
                     </div>
                     <h4 class="modal-title w-100">Are you sure?</h4>
                 </div>
-                <form id="delete-task" name="delete-task">
+                <form id="delete-user" name="delete-user">
 
                     <div class="modal-body">
                         <p>Do you really want to delete these records? This process cannot be undone.</p>
