--- a/src/main/webapp/template/admin_projects.html
+++ b/src/main/webapp/template/admin_projects.html
@@ -99,17 +99,19 @@
                     <button class="btn btn-danger" id="deleteBtn" pid="" style="width:100%">Delete</button>
                 </div>
             </div>
-            <div class="form-group has-search mb-3">
-                <span class="fa fa-search form-control-search"></span>
-                <input type="text" class="form-control" onkeyup="myFunction(this)" placeholder="Search">
-            </div>
-
-            <div class="panel panel-primary" id="popMembers">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Members</h3>
+            <div id="popMembers">
+                <div class="form-group has-search mb-3">
+                    <span class="fa fa-search form-control-search"></span>
+                    <input type="text" class="form-control" onkeyup="myFunction(this)" placeholder="Search">
                 </div>
-                <div class="panel-body">
-                    <ul class="list-group" id="memberList"></ul>
+
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Members</h3>
+                    </div>
+                    <div class="panel-body">
+                        <ul class="list-group" id="memberList"></ul>
+                    </div>
                 </div>
             </div>
         </div>
