--- a/src/main/webapp/template/admin_tasks.html
+++ b/src/main/webapp/template/admin_tasks.html
@@ -86,7 +86,7 @@
   </div>
   <div class="clearfix"></div>
   <br />
-  <div class="row flex-container">
+  <div class="row">
     <div class="mt-0 mb-3">
       <button class="btn btn-primary" id="createBtn" data-toggle="modal" data-target="#formModal">
         <i class="fa fa-add"></i> Create Task
@@ -111,7 +111,7 @@
 
       </table>
     </div>
-    <div class="col-md-4 animated edit-container" hidden id="rowEditForm">
+    <div class="col-md-4 animated edit-container" hidden id="rowEditForm" style="margin-left: 5%;">
       <p class="mt-1" style="font-weight: bold; font-size:20px">Edit task </p>
       <form>
         <div class="form-floating mb-3">
