--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -37,7 +37,7 @@
     <header class="header" id="header">
         <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
         <div>
-            <h3>Project Manager</h3>
+            <h3>Dashboard</h3>
         </div>
         <div class="profile_img" id="profile_img">
             A
@@ -46,7 +46,7 @@
     <div class="l-navbar" id="nav-bar">
         <nav class="nav">
             <div>
-                <a href="#" class="nav_logo">
+                <a href="admin" class="nav_logo">
                     <!-- <i class='bx bx-menu nav_logo-icon' id="header-toggle1"></i> -->
                     <img style="margin-left:-5px" width="30px" src="assets/icons/icon.png" alt="project_management">
                     <span class="nav_logo-name">
@@ -79,7 +79,7 @@
     </div>
 
     <div class="container" style="margin-top: 70px">
-        <h3>Dashboard</h3>
+        <h3></h3>
     </div>
 
 
@@ -180,12 +180,6 @@
     <script src="assets/js/bootstrap/bootstrap.min.js"></script>
     <script src="assets/js/toast.js"></script>
     <script src="assets/js/admin.js"></script>
-    <script src="assets/js/api_utility.js"></script>
-    <script>
-        window.addEventListener("load", function alertFunc() {
-            $(".loader").fadeOut("slow");
-        });
-    </script>
 </body>
 
 </html>
