--- a/src/main/webapp/template/admin_projects.html
+++ b/src/main/webapp/template/admin_projects.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/modal.css" />
     <link rel="stylesheet" href="assets/css/cards.css" />
     <link rel="stylesheet" href="assets/css/loader.css" />
+    <link rel="stylesheet" href="assets/css/floatButton.css" />
     <link rel="icon" type="image/png" href="assets/icons/icon.png" sizes="96x96">
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -40,7 +41,7 @@
     <header class="header" id="header">
         <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
         <div>
-            <h3>Project Manager</h3>
+            <h3>Projects</h3>
         </div>
         <div class="profile_img" id="profile_img">
             <!-- <img src='assets/icons/profile.png' /> -->
@@ -50,7 +51,7 @@
     <div class="l-navbar" id="nav-bar">
         <nav class="nav">
             <div>
-                <a href="#" class="nav_logo">
+                <a href="admin" class="nav_logo">
                     <!-- <i class='bx bx-menu nav_logo-icon' id="header-toggle1"></i> -->
                     <img style="margin-left:-5px" width="30px" src="assets/icons/icon.png" alt="project_management">
                     <span class="nav_logo-name">
@@ -83,7 +84,7 @@
     </div>
 
     <div class="container" style="margin-top: 70px">
-        <h3>Projects</h3>
+        <h3></h3>
     </div>
     <div class="clearfix"></div>
     <br />
