--- a/src/main/webapp/template/employee_tasks.html
+++ b/src/main/webapp/template/employee_tasks.html
@@ -52,8 +52,7 @@
             Projects
           </span>
         </a>
-        <div class="nav_list">
-          <a href="employee" class="nav_link active">
+        <div class="nav_list"> <a href="employee" class="nav_link">
             <i class='bx bx-grid-alt nav_icon'></i>
             <span class="nav_name">Dashboard</span>
           </a>
