--- a/src/main/webapp/template/admin_tasks.html
+++ b/src/main/webapp/template/admin_tasks.html
@@ -10,8 +10,8 @@
   <title>Admin Dashboard</title>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/toast.css" />
-  <link rel="stylesheet" href="assets/css/modal.css" />
   <link rel="stylesheet" href="assets/css/loader.css" />
+  <link rel="stylesheet" href="assets/css/floatButton.css" />
   <link rel="icon" type="image/png" href="assets/icons/icon.png" sizes="96x96">
   <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -20,8 +20,6 @@
   <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-  <!-- <script src="assets/js/jquery.jquery/jquery.dataTables.min.js"></script>
-    <script src="assets/js/dataTables.bootstrap/bootstrap.min.js"></script> -->
 </head>
 
 <body id="body-pd">
@@ -40,7 +38,7 @@
   <header class="header" id="header">
     <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
     <div>
-      <h3>Project Manager</h3>
+      <h3>Tasks</h3>
     </div>
     <div class="profile_img" id="profile_img">
       <!-- <img src='assets/icons/profile.png' /> -->
@@ -50,7 +48,7 @@
   <div class="l-navbar" id="nav-bar">
     <nav class="nav">
       <div>
-        <a href="#" class="nav_logo">
+        <a href="admin" class="nav_logo">
           <!-- <i class='bx bx-menu nav_logo-icon' id="header-toggle1"></i> -->
           <img style="margin-left:-5px" width="30px" src="assets/icons/icon.png" alt="project_management">
           <span class="nav_logo-name">
@@ -87,12 +85,12 @@
   <div class="clearfix"></div>
   <br />
   <div class="row">
-    <div class="mt-0 mb-3">
+    <!-- <div class="mt-0 mb-3">
       <button class="btn btn-primary" id="createBtn" data-toggle="modal" data-target="#formModal">
         <i class="fa fa-add"></i> Create Task
       </button>
-    </div>
-    <div class="col-md-12 animated edit-container" id="tableSize">
+    </div> -->
+    <div class="mt-3 col-md-12 animated edit-container" id="tableSize">
       <table id="tasksTable" class="table  table-striped table-bordered" style="border: right 0 !important;"
         cellspacing="0" width="100%">
         <thead>
@@ -111,7 +109,7 @@
 
       </table>
     </div>
-    <div class="col-md-4 animated edit-container" hidden id="rowEditForm" style="margin-left: 5%;">
+    <div class="mt-3 col-md-4 animated edit-container" hidden id="rowEditForm" style="margin-left: 4%;">
       <p class="mt-1" style="font-weight: bold; font-size:20px">Edit task </p>
       <form>
         <div class="form-floating mb-3">
@@ -282,7 +280,11 @@
       </div>
     </div>
   </div>
-
+  <div class="floating-container">
+    <div class="floating-button" id="createBtn" data-toggle="modal" data-target="#formModal">
+      +
+    </div>
+  </div>
   <script src="assets/js/toast.js"></script>
   <script src="assets/js/jquery/jquery.min.js"></script>
   <script src="assets/js/bootstrap/bootstrap.min.js"></script>
