--- a/src/main/webapp/template/admin_users.html
+++ b/src/main/webapp/template/admin_users.html
@@ -10,6 +10,7 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/loader.css" />
+    <link rel="stylesheet" href="assets/css/floatButton.css" />
     <link rel="icon" type="image/png" href="assets/icons/icon.png" sizes="96x96">
 </head>
 
@@ -29,7 +30,7 @@
     <header class="header" id="header">
         <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
         <div>
-            <h3>Project Manager</h3>
+            <h3>Users</h3>
         </div>
         <div class="profile_img" id="profile_img">
             <!-- <img src='assets/icons/profile.png' /> -->
@@ -39,7 +40,7 @@
     <div class="l-navbar" id="nav-bar">
         <nav class="nav">
             <div>
-                <a href="#" class="nav_logo">
+                <a href="admin" class="nav_logo">
                     <!-- <i class='bx bx-menu nav_logo-icon' id="header-toggle1"></i> -->
                     <img style="margin-left:-5px" width="30px" src="assets/icons/icon.png" alt="project_management">
                     <span class="nav_logo-name">
@@ -74,13 +75,13 @@
         <div class="float-left">
             <h3>Users</h3>
         </div>
-        <div class="row">
-            <div class="mt-4 mb-3">
+        <div class="row mt-5">
+            <!-- <div class="mt-4 mb-3">
                 <button class="btn btn-primary" data-toggle="modal" data-target="#formModal">
                     <i class="fa fa-add"></i>Add User
                 </button>
-            </div>
-            <div class="col-md-12">
+            </div> -->
+            <div class="col-md-11 edit-container center">
                 <table id="usersTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
                         <tr>
@@ -221,6 +222,12 @@
         </div>
 
     </div>
+    <div class="floating-container">
+        <div class="floating-button" id="addProject" data-toggle="modal" data-target="#formModal">
+            +
+        </div>
+    </div>
+
     <link rel="stylesheet" href="assets/css/toast.css" />
     <link rel="stylesheet" href="assets/css/modal.css" />
     <link rel="icon" type="image/png" href="assets/icons/icon.png" sizes="96x96">
