--- a/src/main/webapp/template/employee_projects.html
+++ b/src/main/webapp/template/employee_projects.html
@@ -52,16 +52,15 @@
             Projects
           </span>
         </a>
-        <div class="nav_list">
-          <a href="employee" class="nav_link active">
+        <div class="nav_list"> <a href="employee" class="nav_link">
             <i class='bx bx-grid-alt nav_icon'></i>
             <span class="nav_name">Dashboard</span>
           </a>
-          <a href="employee_projects" class="nav_link">
+          <a href="employee_projects" class="nav_link active">
             <i class='bx bx-briefcase nav_icon'></i>
             <span class="nav_name">Projects</span>
           </a>
-          <a href="employee_tasks" class="nav_link active">
+          <a href="employee_tasks" class="nav_link">
             <i class='bx bx-task nav_icon'></i>
             <span class="nav_name">Tasks</span>
           </a>
