Login error msg fix cookies added

--- a/src/main/webapp/template/employee.html
+++ b/src/main/webapp/template/employee.html
@@ -3,7 +3,7 @@
 
 <head>
   <script src="assets/js/jquery/jquery.min.js"></script>
-  <!-- <script src="assets/js/checkuser.js"></script> -->
+  <script src="assets/js/checkuser.js"></script>
   <link rel="stylesheet" href="assets/css/toast.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/loader.css" />
@@ -98,19 +98,6 @@
           </div>
         </div>
       </a>
-
-      <!-- <a href="admin_users">
-      <div class="card">
-        <div>
-          <div class="numbers" id="users">12</div>
-          <div class="cardName">Users</div>
-        </div>
-
-        <div class="iconBx">
-          <i class='bx bx-user'></i>
-        </div>
-      </div>
-    </a> -->
 
       <a href="admin_tasks">
 
