--- a/src/main/webapp/template/login.html
+++ b/src/main/webapp/template/login.html
@@ -10,6 +10,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet" />
 </head>
+<style>
+  p {
+    color: red;
+  }
+</style>
 
 <body>
   <div class="main">
@@ -32,7 +37,7 @@
         <input type="password" id="cpassword" name="cpassword" onfocusout="passwordCheck()"
           placeholder="Confirm Password" required />
         <button type="submit" id="registerBtn">Sign up</button>
-        <p id="error" style="color: red"></p>
+        <p id="error" style="color:red"></p>
       </form>
     </div>
   </div>
