--- a/src/main/webapp/assets/css/login.css
+++ b/src/main/webapp/assets/css/login.css
@@ -1,130 +1,135 @@
-body{
-	margin: 0;
-	padding: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
-	font-family: 'Jost', sans-serif;
-	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  font-family: "Jost", sans-serif;
+  background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
 }
 .show {
-	font-size: 14px;
+  font-size: 14px;
 }
-.main{
-	width: 400px;
-	height: 560px;
-	background: red;
-	overflow: hidden;
-	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
-	border-radius: 10px;
-	box-shadow: 5px 20px 50px #000;
+.main {
+  width: 400px;
+  height: 560px;
+  background: red;
+  overflow: hidden;
+  background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38")
+    no-repeat center/ cover;
+  border-radius: 10px;
+  box-shadow: 5px 20px 50px #000;
 }
-#chk{
-	display: none;
+#chk {
+  display: none;
 }
-.login{
-	position: relative;
-	width:100%;
-	height: 100%;
+.login {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
-label{
-	color: #fff;
-	font-size: 2.3em;
-	justify-content: center;
-	display: flex;
-	margin: 60px;
-	font-weight: bold;
-	cursor: pointer;
-	transition: .5s ease-in-out;
+label {
+  color: #fff;
+  font-size: 2.3em;
+  justify-content: center;
+  display: flex;
+  margin: 52px;
+  margin-bottom: 40px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
 }
-input{
-	width: 60%;
-	height: 20px;
-	background: #e0dede;
-	justify-content: center;
-	display: flex;
-	margin: 20px auto;
-	padding: 10px;
-	border: 2px solid #eee;
-	outline: none;
-	border-radius: 5px;
+input {
+  width: 60%;
+  height: 20px;
+  background: #e0dede;
+  justify-content: center;
+  display: flex;
+  margin: 20px auto;
+  padding: 10px;
+  border: 2px solid #eee;
+  outline: none;
+  border-radius: 5px;
 }
-button{
-	width: 60%;
-	height: 40px;
-	margin: 10px auto;
-	justify-content: center;
-	display: block;
-	color: #fff;
-	background: #573b8a;
-	font-size: 1em;
-	font-weight: bold;
-	margin-top: 20px;
-	outline: none;
-	border: none;
-	border-radius: 5px;
-	transition: .2s ease-in;
-	cursor: pointer;
+button {
+  width: 60%;
+  height: 40px;
+  margin: 10px auto;
+  justify-content: center;
+  display: block;
+  color: #fff;
+  background: #573b8a;
+  font-size: 1em;
+  font-weight: bold;
+  margin-top: 20px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  transition: 0.2s ease-in;
+  cursor: pointer;
 }
-button:hover{
-	background: #6d44b8;
+button:hover {
+  background: #6d44b8;
 }
-button:disabled{
+button:disabled {
   border: 1px solid #999999;
   background-color: #cccccc;
   color: #666666;
 }
-#error, #error1 {
-    text-align: center;
-    color: rgb(255,255,0);
+#error,
+#error1 {
+  text-align: center;
+  color: rgb(255, 255, 0);
 }
-[type="checkbox"]
-{
-    vertical-align:middle;
+[type="checkbox"] {
+  vertical-align: middle;
 }
 label {
   vertical-align: middle;
 }
 .navbar {
-	display: flex;
+  display: flex;
 }
-.name, .email, .password, .cpassword {
-    background: #e0dede;
+.name,
+.email,
+.password,
+.cpassword {
+  background: #e0dede;
 }
-.signup{
-	height: 460px;
-	background: #eee;
-	border-top-left-radius: 60% 10%;
-    border-top-right-radius: 60% 10%;
-	transform: translateY(-180px);
-	transition: .8s ease-in-out;
+.signup {
+  height: 460px;
+  background: #eee;
+  border-top-left-radius: 60% 10%;
+  border-top-right-radius: 60% 10%;
+  transform: translateY(-180px);
+  transition: 0.8s ease-in-out;
 }
-.signup label{
-	color: #573b8a;
-	transform: scale(.6);
+.signup label {
+  color: #573b8a;
+  transform: scale(0.6);
 }
 
-#chk:checked ~ .signup{
-	transform: translateY(-565px);
+#chk:checked ~ .signup {
+  transform: translateY(-565px);
 }
-#chk:checked ~ .signup label{
-	transform: scale(1);	
+#chk:checked ~ .signup label {
+  transform: scale(1);
 }
-#chk:checked ~ .login label{
-	transform: scale(.6);
+#chk:checked ~ .login label {
+  transform: scale(0.6);
 }
-.loading{
-  font-size:0;
-  width:30px;
-  height:30px;
-  margin-top:5px;
-  border-radius:15px;
-  padding:0;
-  border:3px solid #FFFFFF;
-  border-bottom:3px solid rgba(255,255,255,0.0);
-  border-left:3px solid rgba(255,255,255,0.0);
-  background-color:transparent !important;
+.loading {
+  font-size: 0;
+  width: 30px;
+  height: 30px;
+  margin-top: 5px;
+  border-radius: 15px;
+  padding: 0;
+  border: 3px solid #ffffff;
+  border-bottom: 3px solid rgba(255, 255, 255, 0);
+  border-left: 3px solid rgba(255, 255, 255, 0);
+  background-color: transparent !important;
   animation-name: rotateAnimation;
   animation-duration: 1s;
   animation-delay: 0.2s;
@@ -132,8 +137,10 @@ label {
 }
 
 @keyframes rotateAnimation {
-    0%   {transform: rotate(0deg);}
-    100% {transform: rotate(360deg);}
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
-
-
