Used models for creating json

--- a/src/main/webapp/template/employee_projects.html
+++ b/src/main/webapp/template/employee_projects.html
@@ -3,9 +3,10 @@
 
 <head>
   <script src="assets/js/jquery/jquery.min.js"></script>
-  <!-- <script src="assets/js/checkuser.js"></script> -->
+  <script src="assets/js/checkuser.js"></script>
   <link rel="stylesheet" href="assets/css/toast.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/cards.css" />
 
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -35,7 +36,7 @@
   <header class="header" id="header">
     <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
     <div>
-      <h3>Dashboard</h3>
+      <h3>Projects</h3>
     </div>
     <div class="profile_img" id="profile_img">
       <!-- <img src='assets/icons/profile.png' /> -->
@@ -45,7 +46,7 @@
   <div class="l-navbar" id="nav-bar">
     <nav class="nav">
       <div>
-        <a href="admin" class="nav_logo">
+        <a href="employee" class="nav_logo">
           <!-- <i class='bx bx-menu nav_logo-icon' id="header-toggle1"></i> -->
           <img style="margin-left:-5px" width="30px" src="assets/icons/icon.png" alt="project_management">
           <span class="nav_logo-name">
@@ -89,6 +90,7 @@
   </div>
 </body>
 <script src="assets/js/toast.js"></script>
+<script src="assets/js/project_utility.js"></script>
 <script src="assets/js/jquery/jquery.min.js"></script>
 <script src="assets/js/bootstrap/bootstrap.min.js"></script>
 
