--- a/src/main/webapp/template/employee.html
+++ b/src/main/webapp/template/employee.html
@@ -47,7 +47,7 @@
   <div class="l-navbar" id="nav-bar">
     <nav class="nav">
       <div>
-        <a href="admin" class="nav_logo">
+        <a href="employee" class="nav_logo">
           <!-- <i class='bx bx-menu nav_logo-icon' id="header-toggle1"></i> -->
           <img style="margin-left:-5px" width="30px" src="assets/icons/icon.png" alt="project_management">
           <span class="nav_logo-name">
