--- a/src/main/webapp/template/admin_tasks.html
+++ b/src/main/webapp/template/admin_tasks.html
@@ -84,12 +84,7 @@
   </div>
   <div class="clearfix"></div>
   <br />
-  <div class="row">
-    <!-- <div class="mt-0 mb-3">
-      <button class="btn btn-primary" id="createBtn" data-toggle="modal" data-target="#formModal">
-        <i class="fa fa-add"></i> Create Task
-      </button>
-    </div> -->
+  <div class="row" style="margin-right:0px">
     <div class="mt-3 col-md-12 animated edit-container" id="tableSize">
       <table id="tasksTable" class="table  table-striped table-bordered" style="border: right 0 !important;"
         cellspacing="0" width="100%">
@@ -166,13 +161,6 @@
             style="height: 100px"></textarea>
           <label for="description">Description</label>
         </div>
-
-        <!-- <div class="form-floating mb-3">
-          <div class="mb-3">
-            <label for="eproject" class="form-label">Project</label>
-            <input type="text" id="eproject" class="form-control" placeholder="">
-          </div>
-        </div> -->
 
         <div class="mt-3 mb-3">
           <button type="button" id="eBtn" class="btn btn-success">Save</button>
@@ -292,11 +280,6 @@
   <script src="assets/js/tasks.js"></script>
   <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
   <script src="assets/js/jquery/dataTables.bootstrap5.min.js"></script>
-  <script>
-    $(window).load(function () {
-      $(".loader").fadeOut("slow");
-    });
-  </script>
 </body>
 
 </html>
