--- a/src/main/webapp/template/admin_users.html
+++ b/src/main/webapp/template/admin_users.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Dashboard</title>
+    <title>Admin Dashboard - Users</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/loader.css" />
     <link rel="stylesheet" href="assets/css/floatButton.css" />
@@ -76,11 +76,6 @@
             <h3>Users</h3>
         </div>
         <div class="row mt-5">
-            <!-- <div class="mt-4 mb-3">
-                <button class="btn btn-primary" data-toggle="modal" data-target="#formModal">
-                    <i class="fa fa-add"></i>Add User
-                </button>
-            </div> -->
             <div class="col-md-11 edit-container center">
                 <table id="usersTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
