--- a/src/main/webapp/template/employee_projects.html
+++ b/src/main/webapp/template/employee_projects.html
@@ -90,6 +90,7 @@
   </div>
 </body>
 <script src="assets/js/toast.js"></script>
+<script src="assets/js/eprojects.js"></script>
 <script src="assets/js/project_utility.js"></script>
 <script src="assets/js/jquery/jquery.min.js"></script>
 <script src="assets/js/bootstrap/bootstrap.min.js"></script>
